# fastcrypto

./: .gitignore  Cargo.toml  deny.toml
fastcrypto/: Cargo.toml
fastcrypto-cli/: Cargo.toml
fastcrypto-derive/: Cargo.toml
fastcrypto-tbls/: Cargo.toml
fastcrypto-vdf/: Cargo.toml
fastcrypto-zkp/: Cargo.toml
fastcrypto-zkp/examples/: blake2s_demo.rs
fastcrypto-zkp/src/: circom.rs
fastcrypto-zkp/src/bn254/: utils.rs  zk_login.rs
fastcrypto-zkp/src/bn254/unit_tests/: zk_login_tests.rs
fastcrypto/benches/: crypto.rs
