[workspace]
members = [
  "fastcrypto",
  "fastcrypto-derive",
  "fastcrypto-tbls",
  "fastcrypto-zkp",
  "fastcrypto-cli",
  "fastcrypto-vdf",
]
resolver = "2"

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
bcs = "0.1.4"
bincode = "1.3.3"
digest = "0.10.6"
rand = { version = "0.8.5", features = [ "std" ] }
serde = { version = "1.0.152", features = [ "derive" ] }
sha3 = "0.10.6"
tracing = "0.1.37"
typenum = "1.16.0"
zeroize = "1.5.7"
