[package]
name = "fastcrypto-tbls"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

authors = [ "Mysten Labs <build@mystenlabs.com>" ]
readme = "README.md"

description = "Threshold BLS and DKG protocols"
repository = "https://github.com/MystenLabs/fastcrypto"

[dependencies]
fastcrypto = { path = "../fastcrypto", features = [ "beacon-dkg" ] }
fastcrypto-derive = { path = "../fastcrypto-derive" }

bcs.workspace = true
bincode.workspace = true
digest.workspace = true
rand.workspace = true
serde.workspace = true
sha3.workspace = true
tracing.workspace = true
typenum.workspace = true
zeroize.workspace = true

hex = "0.4.3"
itertools = "0.12"
tap = { version = "1.0.1", features = [  ] }

[dev-dependencies]
criterion = "0.5"
generic-tests = "0.1.2"
tracing-test = "0.2.4"

[[bench]]
harness = false
name = "polynomial"

[[bench]]
harness = false
name = "dkg"

[[bench]]
harness = false
name = "nidkg"
required-features = [ "experimental" ]

[[bench]]
harness = false
name = "tbls"

[features]
default = [  ]
