[package]
name = "fastcrypto-vdf"
version = "0.1.0"

license = "Apache-2.0"

authors = [ "Mysten Labs <build@mystenlabs.com>" ]
edition = "2021"
publish = [ "crates-io" ]

description = "Verifiable delay functions"
repository = "https://github.com/MystenLabs/fastcrypto"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastcrypto = { path = "../fastcrypto" }
num-bigint = "0.4.4"
num-integer = "0.1.45"
num-modular = "0.6.1"
num-prime = { version = "0.4.3", features = [ "big-int" ] }
num-traits = "0.2.17"

[features]
experimental = [  ]

[dev-dependencies]
criterion = "0.5.1"
hex = "0.4.3"
rand = "0.8.4"

[[bench]]
harness = false
name = "vdf"
required-features = [ "experimental" ]

[[bench]]
harness = false
name = "class_group"
required-features = [ "experimental" ]
