[package]
name = "fastcrypto-zkp"
version = "0.1.2"

license = "Apache-2.0"

authors = [ "Mysten Labs <build@mystenlabs.com>" ]
edition = "2021"
publish = [ "crates-io" ]

description = "zk-proof library used at Mysten Labs"
repository = "https://github.com/MystenLabs/fastcrypto"

[[bench]]
harness = false
name = "proving"

[[bench]]
harness = false
name = "zklogin"

[[bench]]
harness = false
name = "poseidon"

[dependencies]
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-ec = { version = "0.4.1" }
ark-ff = { version = "0.4.1", features = [ "asm" ] }
ark-groth16 = { version = "0.4.0" }
ark-relations = "0.4.0"
ark-serialize = "0.4.1"
ark-snark = "0.4.0"
bcs = "0.1.4"
blst = "0.3.10"
byte-slice-cast = "1.2.2"
derive_more = "0.99.16"
fastcrypto = { path = "../fastcrypto", version = "0.1.5" }
ff = { version = "0.13.0", features = [ "derive" ] }
im = "15"
lazy_static = "1.4.0"
neptune = "13.0.0"
num-bigint = { version = "0.4", default-features = false, features = [
  "rand",
] }
once_cell = "1.16"
regex = "1.7.3"
reqwest = { version = "0.11.20", default_features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
rustls-webpki = "0.102"
schemars = "0.8.10"
serde = { version = "1.0.152", features = [ "derive" ] }
serde_json = "1.0.93"
typenum = "1.13.0"

[dev-dependencies]
ark-bls12-377 = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", features = [ "r1cs", "prf" ] }
ark-r1cs-std = "0.4.0"
ark-std = "0.4.0"
blake2 = "0.10.6"
criterion = "0.5.1"
hex = "0.4.3"
lazy_static = "1.4.0"
poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark.git", rev = "ff7f5e05d55667b4ffba129b837da780c4c5c849" }
proptest = "1.1.0"
tokio = { version = "1.24.1", features = [ "sync", "rt", "macros" ] }

[features]
e2e = [  ]
