[package]
name = "fastcrypto"
version = "0.1.7"

license = "Apache-2.0"

authors = [ "Mysten Labs <build@mystenlabs.com>" ]
edition = "2021"
publish = [ "crates-io" ]
readme = "../README.md"

description = "Common cryptographic library used at Mysten Labs"
repository = "https://github.com/MystenLabs/fastcrypto"

[dependencies]
aes = "0.8.2"
aes-gcm = "0.10.1"
ark-ec = "0.4.1"
ark-ff = "0.4.1"
ark-secp256r1 = "0.4.0"
ark-serialize = "0.4.1"
auto_ops = "0.3.0"
base64ct = { version = "1.5.3", features = [ "alloc" ] }
bech32 = "0.9.1"
bincode.workspace = true
blake2 = "0.10.6"
blake3 = "1.3.3"
blst = { version = "0.3.10", default-features = true }
bs58 = "0.4.0"
bulletproofs = "4.0.0"
cbc = { version = "0.1.2", features = [ "std" ] }
ctr = "0.9.2"
curve25519-dalek-ng = "4.1.1"
derive_more = "0.99.16"
digest.workspace = true
ecdsa = { version = "0.16.6", features = [ "rfc6979", "verifying" ] }
ed25519-consensus = { version = "2.1.0", features = [ "serde" ] }
elliptic-curve = { version = "0.13.2", features = [ "hash2curve" ] }
eyre = "0.6.8"
fastcrypto-derive = { path = "../fastcrypto-derive", version = "0.1.3" }
generic-array = { version = "0.14.6", features = [ "serde" ] }
hex = "0.4.3"
hex-literal = "0.4.1"
hkdf = { version = "0.12.3", features = [ "std" ] }
lazy_static = "1.4.0"
merlin = "3.0.0"
num-bigint = "0.4.4"
once_cell = "1.18.0"
p256 = { version = "0.13.2", features = [ "ecdsa" ] }
rand.workspace = true
readonly = "0.2.3"
rfc6979 = "0.4.0"
rsa = { version = "0.8.2", features = [ "sha2" ] }
rust_secp256k1 = { version = "0.27", package = "secp256k1", features = [
  "recovery",
  "rand-std",
  "bitcoin_hashes",
  "global-context",
] }
schemars = "0.8.12"
serde-big-array = { version = "0.5.0", optional = true }
serde.workspace = true
serde_bytes = "0.11.9"
serde_json = "1.0.93"
serde_with = "3"
sha2 = "0.10.6"
sha3.workspace = true
signature = { version = "2.0.0" }
static_assertions = "1.1.0"
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = [ "sync", "rt", "macros" ] }
twox-hash = { version = "1.6.3", optional = true }
typenum.workspace = true
zeroize.workspace = true

[[bench]]
harness = false
name = "crypto"
required-features = [ "experimental" ]

[[bench]]
harness = false
name = "encoding"

[[bench]]
harness = false
name = "ecvrf_ristretto"

[[bench]]
harness = false
name = "groups"

[[bench]]
harness = false
name = "mskr"
required-features = [ "experimental" ]

[[bench]]
harness = false
name = "serialize"

[[bench]]
harness = false
name = "hash"

[features]
beacon-dkg = [  ]
copy_key = [  ]
default = [  ]
experimental = [  ]
unsecure_schemes = [ "dep:twox-hash", "dep:serde-big-array" ]

[dev-dependencies]
base58 = "0.2.0"
base64 = "0.21.0"
bcs.workspace = true
criterion = "0.5"
faster-hex = "0.9"
k256 = { version = "0.11", features = [ "ecdsa", "sha256", "keccak256" ] }
proptest = "1.1.0"
radix64 = "0.6.2"
rust-base58 = "0.0.4"
rustc-hex = "2.1.0"
serde-reflection = "0.3.6"
wycheproof = "0.5.0"
